fix(navbar): wrong color, wrong place navbar

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -54,11 +54,11 @@ main.container {
 
 .navbar {
   --bs-navbar-padding-y: 0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04);
 }
 
 .navbar-nav {
   --bs-nav-link-color: var(--bs-body-color);
-  box-shadow: 0px 4px 4px var(--calitp-cyan-1);
 }
 
 picture.railway img {
